# SovietWM

./: Cargo.toml  README.md  SovietWM.desktop  makefile
docs/: configure.md  index.md  install.md
src/: config.rs  main.rs
