[package]
name = "sovietwm"
version = "0.1.0"
edition = "2021"
author = "TheHolyTachanka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose" }
penrose_ui = "0.1.1"
simplelog = "0.8"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
